# KLS-Restoration-Framework

./: .gitignore  README.md  README_PROJECT.md  pyproject.toml  requirements.txt
configs/: instance_restorer.server.sy.quality.yaml  pipeline.example.yaml  pipeline.server.sy.learned.yaml  pipeline.server.sy.yaml  refinement_learned.data1.yaml  refinement_learned.server.sy.yaml  stage1_components.example.yaml  stage1_components.server.sy.quality.yaml  stage1_components.server.sy.yaml
docs/results/: README.md
khitan_restore/: __init__.py  cli.py  component_annotations.py  config.py  evaluate_refinement.py  evaluate_refinement1.py  instance_restoration.py  instance_restoration_training.py  io_utils.py  learned_refinement.py  learned_refinement_training.py  legacy_loader.py  pipeline.py  refinement.py  restoration.py  segmentation.py  stage1_training.py  super_resolution.py
scripts/: build_component_annotations.py  run_pipeline.py  train_instance_restorer.py  train_learned_refinement.py  train_stage1.py
test/: component_stylegan.py  cospnet.yaml  test_stage1_gan_best_retrieval_modified.py
